# Nawitow

./: DEPLOY_PYTHONANYWHERE.md  README.md  build.sh  pyproject.toml  replit.md
attached_assets/: Pasted--NawiCompany--1758397130340_1758397130341.txt
backend/: app.py  config.py  ecosystem.config.js  requirements.txt  wsgi.py
backend/models/: __init__.py
backend/utils/: auth.py  email.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/ui/: ParticlesBackground.jsx  SocialIcons.jsx
frontend/src/contexts/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: About.jsx  AdminDashboard.jsx  Contact.jsx  Dashboard.jsx  Home.jsx  Login.jsx  Portfolio.jsx  Register.jsx  Services.jsx
