[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator==2.0.0",
    "flask-cors==4.0.0",
    "flask-jwt-extended==4.5.2",
    "flask-mail==0.9.1",
    "flask-sqlalchemy==3.0.5",
    "flask==2.3.3",
    "gunicorn==21.2.0",
    "pillow==10.0.1",
    "python-dotenv==1.0.0",
    "werkzeug==2.3.7",
    "psycopg2-binary>=2.9.10",
]
